Configure java module access