@@ -345,7 +345,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${version.surefire.plugin}</version>
 				<configuration>
-					<argLine>-Djboss.socket.binding.port-offset=300 --add-modules=java.se</argLine>
+					<argLine>-Djboss.socket.binding.port-offset=300 --add-modules=java.se --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
 					<runOrder>alphabetical</runOrder>
 					<!-- Fork every test because it will launch a separate AS instance -->
 					<forkCount>1</forkCount>
